Add structs, enums

--- a/HelloWorld/HelloWorld.csproj
+++ b/HelloWorld/HelloWorld.csproj
@@ -9,4 +9,7 @@
     <Folder Include="Math\" />
     <Folder Include="Struct\" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Strings\Template.cs" />
+  </ItemGroup>
 </Project>
